<package>
  <name>ay_util_msgs</name>
  <version>0.0.1</version>
  <description>ay_util_msgs</description>
  <author>Akihiko Yamaguchi</author>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>Described in LICENSE</license>
  <url>http://akihikoy.net</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>moveit_msgs</run_depend>

</package>


